[project]
name = "rdrpsummit-github-io"
version = "0.1.0"
description = "mkdocs site"
dependencies = [
"mkdocs>=1.6.1,<2",
"mkdocs-material>=9.6.12,<10",
"polars>=1.32.2,<2",
"jsonschema>=4.25.0,<5",
"pyyaml>=6.0,<7",
"mike>=2.1.3,<3", "bs4>=0.0.2,<0.0.3"]
# authors = []
license = { file = "LICENSE" }
readme = "README.md"


[project.urls]
Source = "https://github.com/rdrp-summit/awesome-rna-virus-tools"
Documentation = "https://rdrp-summit.github.io/awesome-rna-virus-tools/"


[tool.pixi.project]
name = "rdrpsummit-github-io"
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.tasks]
build-docs = {cmd= "cd mkdocs && mkdocs build", description = "Build the MkDocs site"}
serve-docs = {cmd= "cd mkdocs && mkdocs serve", description = "Serve the MkDocs site"}
update-readme = {cmd= "python scripts/update_readme.py", description = "Update main README.md from entries"}
update-docs = {cmd= "python scripts/update_docs.py", description = "Generate MkDocs site from entries"}
update-all = { depends-on = ["update-readme", "update-docs"] }
validate-entries = {cmd= "python scripts/validate_entries.py", description = "Validate all JSON entries against schema"}


[tool.pixi.dependencies]
python = ">=3.12.3,<3.13"
bs4 = "*"

